@@ -5,6 +5,8 @@ on:
   push:
     branches:
       - master
+    tags:
+      - "v*"
   pull_request:
     branches:
       - master
@@ -15,7 +17,8 @@ concurrency:
   cancel-in-progress: true
 jobs:
   linux-build-and-test:
-    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v2
+    name: "Linux"
+    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v3
     secrets: inherit
     with:
       matrix-os-version: "[ 'ubuntu-latest' ]"
@@ -23,7 +26,8 @@ jobs:
       poetry-version: "1.3.1"
       enable-coveralls: true  # only report to coveralls.io for tests that run on Linux
   macos-build-and-test:
-    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v2
+    name: "MacOS"
+    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v3
     secrets: inherit
     with:
       matrix-os-version: "[ 'macos-latest' ]"
@@ -31,10 +35,21 @@ jobs:
       poetry-version: "1.3.1"
       enable-coveralls: false 
   windows-build-and-test:
-    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v2
+    name: "Windows"
+    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-build-and-test.yml@v3
     secrets: inherit
     with:
       matrix-os-version: "[ 'windows-latest' ]"
       matrix-python-version: "[ '3.11' ]"  # only run Windows tests on latest Python
       poetry-version: "1.3.1"
       enable-coveralls: false 
+  release:
+    name: "Release"
+    if: github.ref_type == 'tag'
+    uses: pronovic/gha-shared-workflows/.github/workflows/poetry-release.yml@v3
+    needs: [ linux-build-and-test, macos-build-and-test, windows-build-and-test ]
+    secrets: inherit
+    with:
+      python-version: "3.9"
+      poetry-version: "1.3.1"
+      publish-pypi: true
